[tool.poetry]
name = "boilerplate-fastapi"
version = "0.1.0"
description = "Boilerplate FastAPI"
authors = ["seaflux.tech"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.16.0"
SQLAlchemy = "^1.4.29"
PyMySQL = "^1.0.2"
fastapi = "^0.70.1"
python-dotenv = "^0.19.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^3.2.0"
cryptography = "^36.0.1"
Jinja2 = "^3.0.3"
python-i18n = "^0.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
